Module 3 completed and Module 4 (till episode 15)

--- a/sick-fits/backend/package.json
+++ b/sick-fits/backend/package.json
@@ -5,7 +5,7 @@
   "author": "Wes Bos",
   "license": "MIT",
   "scripts": {
-    "dev": "keystone-next",
+    "dev": "PORT=7778 keystone-next",
     "seed-data": "keystone-next --seed-data"
   },
   "eslintConfig": {
